--- a/app/package.json
+++ b/app/package.json
@@ -6,7 +6,14 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg|@testing-library/.*|pretty-format)"
+    ]
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "^6.5.4",
@@ -14,12 +21,15 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "@rneui/themed": "^4.0.0-rc.7",
+    "@testing-library/react-native": "^11.5.2",
     "calendar-link": "^2.4.0",
     "expo": "~46.0.16",
     "expo-cli": "^6.0.8",
     "expo-linear-gradient": "^12.0.1",
     "expo-status-bar": "~1.4.0",
     "express": "^4.18.2",
+    "jest": "^26.6.3",
+    "jest-expo": "^47.0.1",
     "radio-buttons-react-native": "^1.0.4",
     "react": "18.0.0",
     "react-native": "0.69.6",
@@ -35,7 +45,8 @@
     "react-native-svg": "^13.4.0",
     "react-native-webview": "^11.23.1",
     "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4"
+    "react-navigation-stack": "^2.10.4",
+    "react-test-renderer": "^18.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
