--- a/app/package.json
+++ b/app/package.json
@@ -38,15 +38,17 @@
     "react-native-gesture-handler": "^2.8.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
-    "react-native-reanimated": "^2.12.0",
+    "react-native-qrcode-svg": "^6.2.0",
+    "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-simple-radio-button": "^2.7.4",
-    "react-native-svg": "^13.4.0",
+    "react-native-svg": "12.3.0",
     "react-native-webview": "^11.23.1",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
-    "react-test-renderer": "^18.0.0"
+    "react-test-renderer": "^18.0.0",
+    "expo-linking": "~3.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
