--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - backend
+      - automate-backend-tests
   pull_request:
     branches: 
       - main
@@ -31,7 +31,7 @@ jobs:
         working-directory: ./flask_server
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r requirements.txt --use-pep517
           pip install -e .
 
       - name: Run server
