try to get local server running

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -37,5 +37,7 @@ jobs:
       - name: Run unit tests
         working-directory: ./flask_server
         run: | 
+          python3 run_server.py &
+          sleep 5
           pytest .
 
