--- a/app/package.json
+++ b/app/package.json
@@ -1,11 +1,10 @@
 {
   "name": "yims",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest"
   },
@@ -23,16 +22,20 @@
     "@rneui/themed": "^4.0.0-rc.7",
     "@testing-library/react-native": "^11.5.2",
     "calendar-link": "^2.4.0",
-    "expo": "~46.0.16",
+    "expo": "~46.0.19",
     "expo-cli": "^6.0.8",
+    "expo-dev-client": "~1.3.1",
     "expo-linear-gradient": "^12.0.1",
+    "expo-linking": "~3.2.4",
+    "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "express": "^4.18.2",
     "jest": "^26.6.3",
     "jest-expo": "^47.0.1",
     "radio-buttons-react-native": "^1.0.4",
     "react": "18.0.0",
-    "react-native": "0.69.6",
+    "react-dom": "18.0.0",
+    "react-native": "^0.69.6",
     "react-native-calendars": "^1.1293.0",
     "react-native-date-picker": "^4.2.6",
     "react-native-gesture-handler": "^2.8.0",
@@ -44,11 +47,11 @@
     "react-native-screens": "~3.15.0",
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-svg": "12.3.0",
+    "react-native-web": "~0.18.7",
     "react-native-webview": "^11.23.1",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
-    "react-test-renderer": "^18.0.0",
-    "expo-linking": "~3.2.4"
+    "react-test-renderer": "^18.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
