--- a/app/package.json
+++ b/app/package.json
@@ -32,6 +32,8 @@
     "express": "^4.18.2",
     "jest": "^26.6.3",
     "jest-expo": "^47.0.1",
+    "lottie-ios": "^4.1.3",
+    "lottie-react-native": "5.1.3",
     "radio-buttons-react-native": "^1.0.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
