--- a/app/package.json
+++ b/app/package.json
@@ -38,6 +38,7 @@
     "react-native-gesture-handler": "^2.8.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
+    "react-native-picker": "^4.3.7",
     "react-native-reanimated": "^2.12.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
