--- a/app/package.json
+++ b/app/package.json
@@ -37,7 +37,7 @@
     "radio-buttons-react-native": "^1.0.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-native": "^0.69.6",
+    "react-native": "0.69.9",
     "react-native-calendars": "^1.1293.0",
     "react-native-date-picker": "^4.2.6",
     "react-native-gesture-handler": "^2.8.0",
