--- a/app/package.json
+++ b/app/package.json
@@ -22,7 +22,7 @@
     "expo": "~46.0.19",
     "expo-cli": "^6.0.8",
     "expo-dev-client": "~1.3.1",
-    "expo-linear-gradient": "^12.0.1",
+    "expo-linear-gradient": "~11.4.0",
     "expo-linking": "~3.2.4",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
@@ -32,7 +32,7 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.9",
     "react-native-calendars": "^1.1293.0",
-    "react-native-gesture-handler": "^2.8.0",
+    "react-native-gesture-handler": "~2.5.0",
     "react-native-qrcode-svg": "^6.2.0",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
@@ -40,7 +40,7 @@
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-svg": "12.3.0",
     "react-native-web": "~0.18.7",
-    "react-native-webview": "^11.23.1",
+    "react-native-webview": "11.23.0",
     "react-navigation": "^4.4.4",
     "react-test-renderer": "^18.0.0"
   },
