--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/native-stack": "^6.9.10",
+    "@testing-library/react-native": "^11.5.2",
     "calendar-link": "^2.4.0",
     "expo": "~46.0.19",
     "expo-cli": "^6.0.8",
@@ -27,6 +28,7 @@
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "jest": "^26.6.3",
+    "jest-expo": "^47.0.1",
     "lottie-react-native": "5.1.3",
     "prop-types": "^15.8.1",
     "react": "18.0.0",
